--- a/_posts/2017-10-02-2017-10-02-guru99.md
+++ b/_posts/2017-10-02-2017-10-02-guru99.md
@@ -3,7 +3,7 @@ author: Olcay Bayram
 layout: post
 categories: Software
 published: true
-title: 2017-10-02-guru99
+title: Guru99
 subtitle: Tutorials Library
 tags:
   - tutorial
