--- a/_posts/2017-10-02-2017-10-02-guru99.md
+++ b/_posts/2017-10-02-2017-10-02-guru99.md
@@ -10,12 +10,15 @@ tags:
   - education
   - junit
   - selenium
+tr: /2017/10/02/guru99/
 ---
 [Guru99](https://www.guru99.com) is a website worth to mention. Their comprehensive tutorials contain beautifully annotated screenshots. Their goal is to provide fun and free education for everyone.
 
 Sometimes I prefer video tutorials but they can be time consuming so a source like this is more accesible with its content.
 
-I could only check out their amazing [JUnit tutorials](https://www.guru99.com/junit-tutorial.html) for one of my posts called [Attributes and Annotations of Testing Frameworks](http://en.otomatikmuhendis.com/2016/10/09/test-framework-attribute-annotation/). As a blog writer I can see their effort in it. The course covers;
-- JUnit Basics like Introduction, Test framework, Download and Install Guide.
-- Introduces Junit Annotation, API, Assert and JUnit Test Suite.
-- Advanced topics like Ignore Test, Exception Test, ErrorCollector and Parameterized Test.
+I could only check out their amazing [JUnit tutorials](https://www.guru99.com/junit-tutorial.html) for one of my posts called [Attributes and Annotations of Testing Frameworks](http://en.otomatikmuhendis.com/2016/10/09/test-framework-attribute-annotation/). As a blog writer I can see their effort in it.
+
+The JUnit course covers;
+- JUnit Basics like Introduction, Test framework, Download and Install Guide
+- Introduces Junit Annotation, API, Assert and JUnit Test Suite
+- Advanced topics like Ignore Test, Exception Test, ErrorCollector and Parameterized Test
